tests/testcases/errors/BCE0063-3.boo
"""
BCE0063-3.boo(7,9): BCE0063: No enclosing loop out of which to break or continue.
"""
i = 0
while i < 3:
	f = def ():
		continue
	++i
